--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,14 @@
-p {
+* {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
 }
 
+p {
+    margin: 0;
+}
+ul {
+    padding-left: 0;
+}
 .container {
     display: grid;
     grid-template-columns: 1fr 5fr;
@@ -15,8 +22,16 @@ p {
     border: 1px solid black;
 }
 
+.sidebar>div {
+    cursor: pointer;
+}
+
 .sidebar>div>a {
     text-decoration: none;
+}
+
+#headerTitle {
+    margin: 2%;
 }
 
 .contentContainer {
@@ -27,13 +42,24 @@ p {
 
 #content {
     border: 1px solid black;
-    display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr;
+    align-items: center;
+    justify-items: center;
 }
 
-.sidebar>div {
-    cursor: pointer;
+#content>div {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
 }
 
+#todos {
+    display: flex;
+    flex-wrap: wrap;
+}
+#todos>div {
 
-
+}
