--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ ul {
 h1 {
     margin: 1%;
     color: rgb(137, 5, 5);
+
 }
 
 input {
@@ -50,20 +51,17 @@ label {
 
 .sidebar>div>p {
     font-weight: 700;
-    font-size: 18px;
-}
-
-header {
-    
+    font-size: 20px;
 }
 
 #headerTitle {
     margin: 2%;
+    justify-self: center;
 }
 
 .contentContainer {
     display: grid;
-    grid-template-rows: 1fr 8fr;
+    grid-template-rows: 1fr 10fr;
     border: 3px solid black;
 }
 
@@ -105,4 +103,33 @@ header {
 #todos {
     display: flex;
     flex-wrap: wrap;
+    padding: 2%;
+    padding-left: 6%;
+    padding-right: 6%;
+    border: 2px solid rgb(137, 5, 5);
+    gap: 5%;
+    justify-content: center;
+}
+
+#content>div>h2 {
+    border-bottom: 2px solid black;
+    margin-bottom: 5px;
+    font-size: 35px;
+}
+
+button {
+    justify-self: center;
+    color: white;
+    background-color: black;
+    border: 2px inset white;
+    font-weight: 600;
+}
+
+h3 {
+    border-bottom: 1px solid black;
+    justify-self: center;
+}
+
+footer {
+    display: block;
 }
